Added syntax highlighting for annotations within method parameters.

--- a/Syntaxes/Java.plist
+++ b/Syntaxes/Java.plist
@@ -1061,6 +1061,10 @@
 				</dict>
 				<dict>
 					<key>include</key>
+					<string>#annotations</string>
+				</dict>
+				<dict>
+					<key>include</key>
 					<string>#primitive-arrays</string>
 				</dict>
 				<dict>
