--- a/Syntaxes/Java.plist
+++ b/Syntaxes/Java.plist
@@ -1015,6 +1015,10 @@
 						</dict>
 					</array>
 				</dict>
+				<dict>
+					<key>include</key>
+					<string>#comments</string>
+				</dict>
 			</array>
 		</dict>
 		<key>object-types</key>
