--- a/Syntaxes/Java.plist
+++ b/Syntaxes/Java.plist
@@ -922,7 +922,7 @@
 		<key>methods</key>
 		<dict>
 			<key>begin</key>
-			<string>(?!new)(?=[\w&lt;].*\s+)(?=[^=]+\()</string>
+			<string>(?!new)(?=[\w&lt;].*\s+)(?=([^=/]|/(?!/))+\()</string>
 			<key>end</key>
 			<string>}|(?=;)</string>
 			<key>name</key>
