--- a/Syntaxes/Java.plist
+++ b/Syntaxes/Java.plist
@@ -1441,10 +1441,11 @@
                             (?:(?:[a-z]\w*\.)*[A-Z]+\w*) # object type
                         )
                         \s+
-                        [\w\d_&lt;&gt;\[\],\s\?]+
+                        (?!private|protected|public|native|synchronized|abstract|threadsafe|transient|static|final|def|void|boolean|byte|char|short|int|float|long|double)
+                        [\w\d_&lt;&gt;\[\],\?][\w\d_&lt;&gt;\[\],\? \t]*
                         (?:=|$)
                         
-        			))</string>
+					))</string>
 					<key>end</key>
 					<string>(?=;)</string>
 					<key>name</key>
