--- a/Syntaxes/Java.plist
+++ b/Syntaxes/Java.plist
@@ -850,6 +850,10 @@
 						</dict>
 					</array>
 				</dict>
+				<dict>
+					<key>include</key>
+					<string>#comments</string>
+				</dict>
 			</array>
 		</dict>
 		<key>keywords</key>
