--- a/Syntaxes/Java.plist
+++ b/Syntaxes/Java.plist
@@ -1104,6 +1104,10 @@
 							<key>include</key>
 							<string>#parameters</string>
 						</dict>
+						<dict>
+							<key>include</key>
+							<string>#comments</string>
+						</dict>
 					</array>
 				</dict>
 				<dict>
@@ -1143,6 +1147,10 @@
 						<dict>
 							<key>include</key>
 							<string>#all-types</string>
+						</dict>
+						<dict>
+							<key>include</key>
+							<string>#comments</string>
 						</dict>
 					</array>
 				</dict>
