--- a/Syntaxes/Java.plist
+++ b/Syntaxes/Java.plist
@@ -1375,7 +1375,7 @@
 			<array>
 				<dict>
 					<key>match</key>
-					<string>\b(?:void|boolean|byte|char|short|int|float|long|double)\b</string>
+					<string>\b(?:void|var|boolean|byte|char|short|int|float|long|double)\b</string>
 					<key>name</key>
 					<string>storage.type.primitive.java</string>
 				</dict>
